# auto-release-demo

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  build_doc.bat  notes.txt  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: CD.yml  CD_  CD_triggerd_by_workflow.yml  CD_triggerd_by_workflow_backup.yml  CD_v2.yml  CD_v3.yml  bump_version_nodeosc.yml  create_release_and_write_notes.yml  deploy.yml  deploy_internal.yml  deploy_public.yml  deploy_v2.yml  make_release.yml  make_tag.yml  no_username.yml  preCD.yml  preCD_v2.yml  test_release_filter.yml  test_trigger_workflow.yml
.github/workflows/delete/: CD.yml  CD_v2.yml  create_release_and_write_notes.yml  deploy_backup.yml  preCD.yml
docs/: conf.py  index.rst  new_notes.txt  release_notes.rst
docs/_templates/: layout.html
docs/api_ref/: YellowBanana.Class1.rst  YellowBanana.function1.rst  index.rst
src/YellowBanana/: __init__.py  _module1.py  _module3.py
src/auto_release_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/my_package/: __init__.py  _module1.py  _module3.py
