[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-package"
authors = [
  { name="4Subsea", email="python@4subsea.com" },
]

dynamic = ["version"]

readme = "README.md"
license = { file="LICENSE" }

requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas >= 1.3.3",
    "scipy >= 1.6"
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix", 
    "Operating System :: Microsoft :: Windows",
]

[tool.setuptools.dynamic]
version = {attr = "my_package.__version__"}

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py
    docs

[testenv]
commands =
    pytest --cov=auto-release-demo --cov-report html:cov_html-{envname} ./tests
deps =
    pytest
    pytest-cov
    pandas
    scipy

[testenv:docs]
basepython = python3.9
commands = sphinx-build -W -b html -d {toxworkdir}/docs_doctree docs {toxworkdir}/docs_out
deps =
    sphinx
    pydata-sphinx-theme
    pandas
    scipy
"""
